// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`valid template matches snapshot on initial render 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-width-container"
  >
    <main
      class="nhsuk-main-wrapper"
      id="maincontent"
      role="main"
    >
      <div
        class="nhsuk-grid-row"
      >
        <div
          class="nhsuk-grid-column-two-thirds"
        >
          <form
            action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
          >
            <input
              name="form-id"
              readonly=""
              type="hidden"
              value="edit-template-name"
            />
            <input
              name="csrf_token"
              readonly=""
              type="hidden"
              value="no_token"
            />
            <input
              name="templateId"
              readonly=""
              type="hidden"
              value="template-123"
            />
            <input
              name="lockNumber"
              readonly=""
              type="hidden"
              value="7"
            />
            <div
              class="nhsuk-form-group"
            >
              <h1
                class="nhsuk-label-wrapper"
              >
                <label
                  class="nhsuk-label nhsuk-label--l"
                  for="campaignId"
                >
                  Edit template campaign
                </label>
              </h1>
              <div
                class="nhsuk-hint"
              >
                Choose which campaign this letter is for
              </div>
              <select
                class="nhsuk-select"
                id="campaignId"
                name="campaignId"
              >
                <option />
                <option
                  selected=""
                  value="Campaign 1"
                >
                  Campaign 1
                </option>
                <option
                  value="Campaign 2"
                >
                  Campaign 2
                </option>
              </select>
            </div>
            <div
              class="nhsuk-form-group"
            >
              <button
                aria-disabled="false"
                class="nhsuk-button"
                type="submit"
              >
                Save changes
              </button>
              <a
                class="nhsuk-u-display-inline-block nhsuk-u-font-size-19 nhsuk-u-margin-3"
                data-testid="back-link-bottom"
                href="/preview-letter-template/template-123"
              >
                Go back
              </a>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`valid template renders errors when blank form is submitted and error state is returned 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-width-container"
  >
    <main
      class="nhsuk-main-wrapper"
      id="maincontent"
      role="main"
    >
      <div
        aria-labelledby="error-summary-title"
        class="nhsuk-error-summary"
        role="alert"
        tabindex="-1"
      >
        <h2
          class="nhsuk-error-summary__title"
          data-testid="error-summary"
          id="error-summary-title"
        >
          There is a problem
        </h2>
        <ul
          class="nhsuk-list nhsuk-error-summary__list"
        >
          <li>
            <a
              href="#campaignId"
            >
              Choose a campaign
            </a>
          </li>
        </ul>
      </div>
      <div
        class="nhsuk-grid-row"
      >
        <div
          class="nhsuk-grid-column-two-thirds"
        >
          <form
            action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
          >
            <input
              name="form-id"
              readonly=""
              type="hidden"
              value="edit-template-name"
            />
            <input
              name="csrf_token"
              readonly=""
              type="hidden"
              value="no_token"
            />
            <input
              name="templateId"
              readonly=""
              type="hidden"
              value="template-123"
            />
            <input
              name="lockNumber"
              readonly=""
              type="hidden"
              value="7"
            />
            <div
              class="nhsuk-form-group nhsuk-form-group--error"
            >
              <h1
                class="nhsuk-label-wrapper"
              >
                <label
                  class="nhsuk-label nhsuk-label--l"
                  for="campaignId"
                >
                  Edit template campaign
                </label>
              </h1>
              <div
                class="nhsuk-hint"
              >
                Choose which campaign this letter is for
              </div>
              <span
                class="nhsuk-error-message"
              >
                <span
                  class="nhsuk-u-visually-hidden"
                >
                  Error: 
                </span>
                Choose a campaign
              </span>
              <select
                class="nhsuk-select nhsuk-select--error"
                id="campaignId"
                name="campaignId"
              >
                <option />
                <option
                  value="Campaign 1"
                >
                  Campaign 1
                </option>
                <option
                  value="Campaign 2"
                >
                  Campaign 2
                </option>
              </select>
            </div>
            <div
              class="nhsuk-form-group"
            >
              <button
                aria-disabled="false"
                class="nhsuk-button"
                type="submit"
              >
                Save changes
              </button>
              <a
                class="nhsuk-u-display-inline-block nhsuk-u-font-size-19 nhsuk-u-margin-3"
                data-testid="back-link-bottom"
                href="/preview-letter-template/template-123"
              >
                Go back
              </a>
            </div>
          </form>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;
